--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8083/
+APP_PORT=8083
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -63,3 +64,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Agregar estas líneas para Sail
+MYSQL_EXTRA_OPTIONS=""
+MYSQL_ROOT_PASSWORD=password
