feat: complete logic and views of BookController -Show

--- a/.env.example
+++ b/.env.example
@@ -68,3 +68,6 @@ VITE_APP_NAME="${APP_NAME}"
 # Agregar estas líneas para Sail
 MYSQL_EXTRA_OPTIONS=""
 MYSQL_ROOT_PASSWORD=password
+
+# Api books Google
+GOOGLE_BOOKS_API_KEY=""
